# FC_labs

./: CMakeLists.txt
main/: Duffing.cpp  DuffingLyaponov.cpp  Ex225.cpp  Ex422.cpp  Ex454.cpp  Ex464.cpp  ShootingMethod.cpp  VanderPol.cpp
src/: DataPoints.cpp  DataPoints.h  HermiteSpline.cpp  HermiteSpline.h  IntegDeriv.cpp  IntegDeriv.h  Interpolator.cpp  Interpolator.h  LagrangeInterpolation.cpp  LagrangeInterpolation.h  Material.cpp  Material.h  NevilleInterpolation.cpp  NevilleInterpolation.h  NonlinearSolver.cpp  NonlinearSolver.h  ODEpoint.cpp  ODEpoint.h  ODEsolver.cpp  ODEsolver.h  OpticalMat.cpp  OpticalMat.h  Spline3Interpolation.cpp  Spline3Interpolation.h
